fix ( all vertical lines will now align with each icon )

--- a/app/components/common/community-perspectives/community-perspectives.scss
+++ b/app/components/common/community-perspectives/community-perspectives.scss
@@ -5,6 +5,7 @@
   color: #B9D9D9;
   text-align: center;
   margin-bottom: 25px;
+  overflow-x: hidden;
 
   .top {
     background: #000000;
@@ -115,7 +116,7 @@
       background-repeat: no-repeat;
       width: 38px;
       height: 60px;
-      right: -50px;
+      right: -30px;
       background-size: contain;
       &:before {
         content: '' !important;
@@ -127,7 +128,7 @@
       background-repeat: no-repeat;
       width: 38px;
       height: 60px;
-      left: -50px;
+      left: -30px;
       background-size: contain;
       &:before {
         content: '' !important;
